--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,111 @@ button {
 	text-transform: uppercase;
 	color: var(--heading);
 	text-decoration: none;
-	font-size: 1.6rem;
+	font-size: 1.3rem;
 	font-weight: 700;
+}
+.feature__header {
+	padding: 11rem 1.5rem 14rem;
+	background-color: var(--bg-light);
+	text-align: center;
+}
+.feature__img-top {
+	margin: 0 auto 3rem;
+}
+.feature__heading {
+	font-size: 1.8rem;
+	line-height: 1.6;
+	text-transform: uppercase;
+	color: var(--heading);
+	margin-bottom: 2rem;
+	font-weight: bold;
+	text-align: center;
+}
+.feature__header-desc {
+	font-size: 1.8rem;
+	line-height: 1.6;
+	color: var(--text);
+	max-width: 106rem;
+	margin: 0 auto;
+}
+.feature__item {
+	display: flex;
+	flex-flow: row wrap;
+	height: 60rem;
+	overflow: hidden;
+}
+.feature__item-img {
+	width: 67%;
+	position: relative;
+}
+.feature__item-content {
+	width: 33%;
+}
+.feature__item .img__bg {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+}
+.feature__item .img__brand {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
+}
+.feature__item-content {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.feature__item-content-top {
+	padding: 0 7rem;
+	position: relative;
+	background-color: white;
+	height: 67%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.feature__item-text {
+	font-size: 1.6rem;
+	line-height: 1.6;
+	color: var(--text);
+	text-align: justify;
+	position: relative;
+	padding-bottom: 3rem;
+}
+.feature__item-content-bottom {
+	height: 33%;
+}
+.feature__item:nth-child(2) .feature__item-img{
+	order: 2 ;
+}
+.feature__item:last-child > .feature__item-img {
+	width: 33%;
+}
+.feature__item:last-child > .feature__item-content {
+	width: 34%;
+}
+.feature__item-content-top:after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 2rem;
+	height: 2rem;
+	background-color: white;
+	z-index: 10;
+	transform: translate(-50%, 50%) rotate(-45deg);
+}
+.feature__item-text:after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 6rem;
+	height: 1px;
+	background-color: var(--bg-light);
 }
